Fixes overflow issue with select in place reference attribute

--- a/src/WebComponents/Attributes/persistent-object-attribute-edit.scss
+++ b/src/WebComponents/Attributes/persistent-object-attribute-edit.scss
@@ -122,6 +122,7 @@
 
     .buttons {
         @include layout-horizontal();
+        background-color: white;
 
         > ::content {
             > button, > .button, > [button], > vi-popup:not([content]) button[header] {
